--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "A simple app based on Alura's AngularJS course.",
   "devDependencies": {
     "angular": "1.6.10",
+    "angular-animate": "1.6.10",
     "angular-mocks": "1.6.10",
     "husky": "1.0.0",
     "jasmine-core": "3.4.0",
