--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "angular": "1.6.10",
     "angular-animate": "1.6.10",
     "angular-mocks": "1.6.10",
+    "angular-route": "1.6.10",
     "husky": "1.0.0",
     "jasmine-core": "3.4.0",
     "jshint": "2.10.2",
