--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "name": "Caio Rodrigues Fernandes",
     "url": "https://github.com/rfcaio"
   },
-  "dependencies": {},
-  "description": "A simple app based on Alura's AngularJS course.",
-  "devDependencies": {
+  "dependencies": {
     "angular": "1.6.10",
     "angular-animate": "1.6.10",
+    "angular-route": "1.6.10"
+  },
+  "description": "A simple app based on Alura's AngularJS course.",
+  "devDependencies": {
     "angular-mocks": "1.6.10",
-    "angular-route": "1.6.10",
     "husky": "1.0.0",
     "jasmine-core": "3.4.0",
     "jshint": "2.10.2",
@@ -35,12 +36,12 @@
     "url": "https://github.com/rfcaio/angularjs-alura-course.git"
   },
   "scripts": {
-    "dev": "./node_modules/.bin/lite-server",
+    "dev": "lite-server",
     "lint": "npm run lint:src && npm run lint:test",
-    "lint:src": "./node_modules/.bin/jshint src/",
-    "lint:test": "./node_modules/.bin/jshint spec/",
-    "test": "./node_modules/.bin/karma start --reporters progress --single-run",
-    "test:watch": "./node_modules/.bin/karma start --no-single-run --reporters spec"
+    "lint:src": "jshint src/",
+    "lint:test": "jshint spec/",
+    "test": "karma start --reporters progress --single-run",
+    "test:watch": "karma start --no-single-run --reporters spec"
   },
   "version": "1.0.0"
 }
